@@ -16,6 +16,11 @@ DESCRIPTION
 
         structs are converted into a normal array.
 
+BUGS
+        The cast notation only works if the precise type of <value>
+        is known at compile-time. This will not be fixed - use the
+        function form instead.
+
 HISTORY
         LDMud 3.3.250 added structs to the accepted data types.
 
