@@ -17,6 +17,11 @@ DESCRIPTION
         in mind: to_int(3.1*10.0) does not return 31, but instead 30,
         because internally the result of the multiplication is 30.999999 .
 
+BUGS
+        The cast notation only works if the precise type of <value>
+        is known at compile-time. This will not be fixed - use the
+        function form instead.
+
 HISTORY
         Introduced in 3.2.1@2
 
