@@ -17,6 +17,11 @@ DESCRIPTION
 
         Objects and the number 0 return themselves.
 
+BUGS
+        The cast notation only works if the precise type of <value>
+        is known at compile-time. This will not be fixed - use the
+        function form instead.
+
 SEE ALSO
         find_object(E), to_array(E), to_int(E), to_string(E),
         get_type_info(E)
