@@ -15,6 +15,11 @@ DESCRIPTION
         comes first. That means that to_string( ({ 33, 34 }) ) will return
         "12" and not "({ 33, 34 })".
 
+BUGS
+        The cast notation only works if the precise type of <value>
+        is known at compile-time. This will not be fixed - use the
+        function form instead.
+
 HISTORY
         LDMud 3.2.8 adds lambda closures to the accepted data types.
         LDMud 3.3.250 adds structs to the accepted data types.
