@@ -60,12 +60,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 461)
-(Parent-Version lpmud 3-3 460)
-(Version-Log "Made the cast checks more informative.")
+(Project-Version lpmud 3-3 462)
+(Parent-Version lpmud 3-3 461)
+(Version-Log "Corrected a flaw in the argument checking of -=.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 18 Jul 2003 01:18:12 -0600")
+(Checkin-Time "Mon, 21 Jul 2003 15:40:58 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -102,7 +102,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.67 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.524 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.525 644))
   (HISTORY (lpmud/f/49_HISTORY 1.327 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -191,7 +191,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.37 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.36 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.37 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.57 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
@@ -270,7 +270,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.43 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.44 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -1234,11 +1234,11 @@
   (doc/efun/this_player (lpmud/q/42_this_playe 1.4 644))
   (doc/efun/throw (lpmud/q/43_throw 1.3 644))
   (doc/efun/time (lpmud/q/44_time 1.1.1.5 644))
-  (doc/efun/to_array (lpmud/q/45_to_array 1.5 644))
-  (doc/efun/to_float (lpmud/q/46_to_float 1.3 644))
-  (doc/efun/to_int (lpmud/q/47_to_int 1.6 644))
-  (doc/efun/to_object (lpmud/q/48_to_object 1.3.1.2 644))
-  (doc/efun/to_string (lpmud/q/49_to_string 1.7 644))
+  (doc/efun/to_array (lpmud/q/45_to_array 1.6 644))
+  (doc/efun/to_float (lpmud/q/46_to_float 1.4 644))
+  (doc/efun/to_int (lpmud/q/47_to_int 1.7 644))
+  (doc/efun/to_object (lpmud/q/48_to_object 1.3.1.3 644))
+  (doc/efun/to_string (lpmud/q/49_to_string 1.8 644))
   (doc/efun/to_struct (lpmud/a/b/17_to_struct 1.1.1.2 644))
   (doc/efun/trace (lpmud/q/50_trace 1.4.1.3 644))
   (doc/efun/traceprefix (lpmud/q/51_traceprefi 1.4.1.2 644))
